--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,12 +1,12 @@
 {
   "version": 2,
   "builds": [
-    {"src": "index.js", "use": "@vercel/node"}
-    ],
-  "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
