--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,10 @@
 {
   "scripts": {
-    "start": "node app.js",
+    "start": "node api/app.js",
     "vercel-build": "echo hello"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
