--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,12 +1,4 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/$1" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
